main.css
@import "/src/css/fly.css";
@import "/src/css/grab.css";
@import "/src/css/btn.css";
@import "/src/css/ui.css";
@import "/src/css/context-menu.css";
@import "/src/css/color.css";

@font-face {
  font-family: sera-reguler;
  src: url('/src/asset/cera-round.otf');
}

:root {
  --dark-text : #4e6d89;
  --test : #4b667e;
  --normal-text : #8199aa;
  --box-border : rgba(0, 0, 0, 0.102);
  --back-color : #f7f7f7;
  --container-color : #e1e7ee;
}

body {
  box-sizing: border-box;
  margin: 0;
  font-family: arial;
  /* user-select: none; */
}





.setting-container {
  /* display: none; */
  transform: translate(100%, 0);
  opacity: 0;
  background-color: rgba(0, 0, 0, 0.296);
  backdrop-filter: blur(0);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  height: 100vh;
  width: 100vw;
  transition:  backdrop-filter .4s;
  /* transition-timing-function: ease-in-out; */
  /* border: 1px solid black; */

  display: grid;
  place-items: center;
}

.setting-modal {
  width: 300px;
  height: 357px;
  display: grid;
  /* align-items: center; */
  grid-template-rows: 44% 56%;
  border-radius: 3px;
  background-color: var(--back-color);
  
    /* transform: translate(0, 200%); */
}



.setting-content-top {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile {
  margin-top: 35px;
  display: flex;
  flex-direction: column;
  align-items: center;
  
  height: 99%;
  width: 100%;
}

.profile p {
  margin: 8px 0;
  color: var(--dark-text);
}

.horizontal-line {
  width: 95%;
  border-bottom: .25px solid var(--normal-text);
}


/* setting content bot */
.setting-content-bot {
  padding: 0 20px;
}

.setting-content-bot i {
  color: var(--dark-text);
  font-size: 18px;
}

.setting-content-bot .content {
  padding-left: 10px;
  display: inline;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  color: var(--dark-text);
}

.setting-content-bot .title {
  margin-top: 14px;
  color: var(--normal-text);
  font-size: 10px;
  letter-spacing: 2px;
  font-weight: 600;
}

.wrapper {
  padding: 6px 0;
}


/* swicth */
.switch {
  position: relative;
  display: flex;
  align-items: center;
  width: 40px;
  height: 20px;
  outline: 1px solid var(--dark-text);
  background-color: var(--back-color);
  transition: .2s;

  border-radius: 9.5px;
  float: right;
}

.switch-button {
  position: absolute;
  left: 0;
  /* border: 1px solid black; */
  margin: 0 1.6px;
  height: 16px;
  width: 16px;
  background-color: var(--dark-text);
  transition: .2s;
  border-radius: 50%;
}

.switch-button-on {
  /* background-color: var(--light-back); */
  left: 20px;
}

